@@ -94,6 +94,7 @@ CONFIG_START_MONTH=2
 CONFIG_START_DAY=27
 CONFIG_JULIAN_TIME=n
 CONFIG_DEV_CONSOLE=y
+CONFIG_MUTEX_TYPES=y
 
 #
 # The following can be used to disable categories of
