@@ -41,6 +41,9 @@ AOBJS	= $(ASRCS:.S=$(OBJEXT))
 CSRCS	= main.c dev_null.c
 ifneq ($(CONFIG_DISABLE_PTHREAD),y)
 CSRCS	+= cancel.c cond.c mutex.c sem.c roundrobin.c barrier.c
+ifeq ($(CONFIG_MUTEX_TYPES),y)
+CSRCS   += rmutex.c
+endif
 endif
 ifneq ($(CONFIG_DISABLE_SIGNALS),y)
 CSRCS	+= sighand.c
