@@ -1,7 +1,7 @@
-/************************************************************
- * ostest.h
+/****************************************************************************
+ * examples/ostest/ostest.h
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -31,80 +31,84 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ************************************************************/
+ ****************************************************************************/
 
 #ifndef __OSTEST_H
 #define __OSTEST_H
 
-/************************************************************
+/****************************************************************************
  * Compilation Switches
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Included Files
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Definitions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Public Types
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Public Variables
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Public Function Prototypes
- ************************************************************/
+ ****************************************************************************/
 
-/* dev_null.c ***********************************************/
+/* dev_null.c ***************************************************************/
 
 extern int dev_null(void);
 
-/* mutex.c **************************************************/
+/* mutex.c ******************************************************************/
 
 extern void mutex_test(void);
 
-/* sem.c ****************************************************/
+/* rmutex.c ******************************************************************/
+
+extern void recursive_mutex_test(void);
+
+/* sem.c ********************************************************************/
 
 extern void sem_test(void);
 
-/* cond.c ***************************************************/
+/* cond.c *******************************************************************/
 
 extern void cond_test(void);
 
-/* mqueue.c *************************************************/
+/* mqueue.c *****************************************************************/
 
 extern void mqueue_test(void);
 
-/* timedmqueue.c ********************************************/
+/* timedmqueue.c ************************************************************/
 
 extern void timedmqueue_test(void);
 
-/* cancel.c *************************************************/
+/* cancel.c *****************************************************************/
 
 extern void cancel_test(void);
 
-/* timedwait.c **********************************************/
+/* timedwait.c **************************************************************/
 
 extern void timedwait_test(void);
 
-/* sighand.c ************************************************/
+/* sighand.c ****************************************************************/
 
 extern void sighand_test(void);
 
-/* posixtimers.c ********************************************/
+/* posixtimers.c ************************************************************/
 
 extern void timer_test(void);
 
-/* roundrobin.c *********************************************/
+/* roundrobin.c *************************************************************/
 
 extern void rr_test(void);
 
-/* barrier.c ************************************************/
+/* barrier.c ****************************************************************/
 
 extern void barrier_test(void);
 
