@@ -372,3 +372,5 @@
 0.3.12 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Improved solution to POSIX timer lifetime controls bug fixed in 0.3.11.
+	* Add test for recursive mutexes
+	* Correct bug in recursive mutex logic
